--- a/src/index.html
+++ b/src/index.html
@@ -2,43 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../assets/icon/iconfont.css">
+    <link rel="stylesheet" href="css/app.css">
     <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
     <script src="index.js"></script>
     <style type="text/css">
-      .lv-container {
-        position: relative;
-        display: inline-block;
-        background-color: #000;
-      }
-      .lv-player {
 
-      }
-      .lv-controls {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        background-color: rgba(255, 255, 255, .2);
-      }
-      .lv-controls-play {
-        width: 44px;
-        height: 44px;
-        background-color: red;
-      }
-      .lv-controls-progress {
-        position: absolute;
-        top: -10px;
-        height:  10px;
-        width: 100%;
-        background-color: red;
-      }
-      .lv-controls-volume {
-        height: 20px;
-        width:  20px;
-        background-color: white;
-      }
     </style>
   </head>
   <body>
