feat: add test video

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <div id="videoPlayer" src="http://192.168.36.154:8082/videoAdvert/src/1477712757575.mp4"></div>
+    <div id="videoPlayer" src="../assets/test.mp4"></div>
     <script type="text/javascript">
       $("#videoPlayer").VideoPlayer({
         color: "red"
